# 3cpio

./: .gitignore  Cargo.toml  LICENSE  NEWS.md  README.md  TODO.md
.cargo/: config.toml
.github/workflows/: ci.yaml
doc/: Benchmarks.md
man/: 3cpio.1.adoc  README.md
src/: compression.rs  examine.rs  extended_error.rs  extract.rs  filetype.rs  header.rs  lib.rs  libc.rs  logger.rs  main.rs  manifest.rs  ranges.rs  seek_forward.rs  temp_dir.rs  writer.rs
tests/: bigdata.cpio  bzip2.cpio  cli.rs  generate  gzip.cpio  lz4.cpio  lzma.cpio  lzop.cpio  path-traversal.cpio  shell.cpio  single.cpio  xz.cpio  zstd.cpio
