[package]
edition = "2021"
name = "threecpio"
version = "0.9.0"
authors = ["Benjamin Drung <bdrung@posteo.de>"]
description = "manage initrd cpio archives"
homepage = "https://github.com/bdrung/3cpio"
readme = "README.md"
keywords = [
    "archive",
    "cpio",
    "initrd",
]
categories = [
    "command-line-utilities",
    "compression",
    "encoding",
    "filesystem",
]
license = "ISC"
repository = "https://github.com/bdrung/3cpio"

[[bin]]
name = "3cpio"
path = "src/main.rs"

[dependencies]
glob = "0.3"
libc = "0.2.173"
lexopt = "0.3"
